chore(sonar): misc sonar fixes